...
                context.pop();
              },
            ),
            TextButton(
              onPressed: addCollection,
              child: const Text('Create'),
              key: const Key('create_collection_button'),
            ),
          ],
        ),
      );
    }

    return Scaffold(
      appBar: AppBar(
        title: const Text('My Collections'),
        actions: [
          IconButton(
            icon: const Icon(Icons.add),
            tooltip: 'Add new collection',
            onPressed: () {
              showDialogBox();
...
