...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Edit collection'),
        actions: [
          IconButton(
            key: const Key('edit_collection_button_submit'),
            icon: const Icon(Icons.check),
            onPressed: isSubmitVisible ? editCollectionName : null,
          ),
        ],
      ),
      body: Column(
...
                      )
                    : null,
              ),
            ),
          ),
          TextButton.icon(
            key: const Key('delete_collection_button'),
            onPressed: () {
              ref
                  .read(collectionRepositoryProvider.notifier)
                  .removeCollection(widget.collection.id);

              ref.invalidate(collectionRepositoryProvider);
...
