...
          maxLines: 1,
          overflow: TextOverflow.ellipsis,
        ),
        actions: [
          IconButton(
            icon: const Icon(Icons.edit),
            key: const Key('edit_collection_button'),
            onPressed: () {
              context.pushNamed(
                AppRoute.editCollectionScreen.name,
                extra: collection,
              );
            },
...
